--- a/Ship_Debbuger/Ship_Debbuger/CompasCalibrate.xaml
+++ b/Ship_Debbuger/Ship_Debbuger/CompasCalibrate.xaml
@@ -6,10 +6,12 @@
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <Button Grid.Row="0" x:Name="_startButton" Text="Рисовать" Clicked="Button_Clicked"/>
-            <forms:SKCanvasView x:Name="_canvasView" Grid.Row="1" PaintSurface="_canvasView_PaintSurface"/>
+            <Button Grid.Row="1" x:Name="_saveButton" Text="Сохранить" Clicked="Button_Clicked_Save" IsVisible="false"/>
+            <forms:SKCanvasView x:Name="_canvasView" Grid.Row="2" PaintSurface="_canvasView_PaintSurface" BackgroundColor="Black"/>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
