--- a/Ship_Debbuger/Ship_Debbuger/MainPage.xaml
+++ b/Ship_Debbuger/Ship_Debbuger/MainPage.xaml
@@ -11,37 +11,45 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
-
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto"/>
+        </Grid.ColumnDefinitions>
 
         <Grid.Resources>
             <Style x:Key="_defaultLabel" TargetType="Label">
                 <Setter Property="FontSize" Value="30"/>
             </Style>
         </Grid.Resources>
-        <Grid Grid.Row="0">
-            <Grid.RowDefinitions >
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="Auto"/>
-            </Grid.ColumnDefinitions>
-            <Label Grid.Row="0" Grid.Column="0" Style="{StaticResource _defaultLabel}" Text="Компас:"/>
-            <Label Grid.Row="1" Grid.Column="0" Style="{StaticResource _defaultLabel}" Text="{Binding XVal, Mode=OneWay}"/>
-            <Label Grid.Row="2" Grid.Column="0" Style="{StaticResource _defaultLabel}" Text="{Binding YVal, Mode=OneWay}"/>
-            <Label Grid.Row="3" Grid.Column="0" Style="{StaticResource _defaultLabel}" Text="{Binding Azimut, Mode=OneWay}"/>
-            <Button Grid.Column="1" Grid.Row="3" Grid.RowSpan="2" Text="обнуление" Command="{Binding ZeroingCommand, Mode=OneWay}"/>
-            <Button Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Text="Калибровка" Command="{Binding CalibrateCompasCommand, Mode=OneWay}"/>
-        </Grid>
-        <Label Grid.Row="1" Style="{StaticResource _defaultLabel}" Text="Растояние:"/>
-        <Label Grid.Row="2" Style="{StaticResource _defaultLabel}" Text="{Binding L1, Mode=OneWay}"/>
-        <Label Grid.Row="3" Style="{StaticResource _defaultLabel}" Text="{Binding L2, Mode=OneWay}"/>
-        <Label Grid.Row="4" Style="{StaticResource _defaultLabel}" Text="Координаты:"/>
-        <Label Grid.Row="5" Style="{StaticResource _defaultLabel}" Text="{Binding Xpos, Mode=OneWay}"/>
-        <Label Grid.Row="6" Style="{StaticResource _defaultLabel}" Text="{Binding Ypos, Mode=OneWay}"/>
+        
+        <Label Grid.Row="0" Grid.Column="0" Style="{StaticResource _defaultLabel}" Text="Компас:"/>
+        <Button Grid.Row="1"  Grid.Column="1" Grid.RowSpan="2" Text="Калибровка" Command="{Binding CalibrateCompasCommand, Mode=OneWay}"/>
+        
+        <Label Grid.Row="1" Grid.Column="0" Style="{StaticResource _defaultLabel}" Text="{Binding XVal, Mode=OneWay}"/>
+        <Label Grid.Row="2" Grid.Column="0" Style="{StaticResource _defaultLabel}" Text="{Binding YVal, Mode=OneWay}"/>
+        <Label Grid.Row="3" Grid.Column="0" Style="{StaticResource _defaultLabel}" Text="{Binding Azimut, Mode=OneWay}"/>
+        <Button Grid.Row="3"  Grid.Column="1" Text="обнуление" Command="{Binding ZeroingCommand, Mode=OneWay}"/>
+
+        <Label Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Style="{StaticResource _defaultLabel}" Text="Растояние:"/>
+        <Label Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Style="{StaticResource _defaultLabel}" Text="{Binding L1, Mode=OneWay}"/>
+        <Label Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Style="{StaticResource _defaultLabel}" Text="{Binding L2, Mode=OneWay}"/>
+        
+        <Label Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" Style="{StaticResource _defaultLabel}" Text="Координаты:"/>
+        <Label Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="2" Style="{StaticResource _defaultLabel}" Text="{Binding Xpos, Mode=OneWay}"/>
+        <Label Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="2" Style="{StaticResource _defaultLabel}" Text="{Binding Ypos, Mode=OneWay}"/>
+        <Button Grid.Row="8" Grid.Column="1" Grid.RowSpan="2" Text="фиксация" Command="{Binding FixationCommand, Mode=OneWay}"/>
+        
+        <Label Grid.Row="10" Grid.Column="0" Style="{StaticResource _defaultLabel}" Text="Гироскоп:"/>
+        <Label Grid.Row="11" Grid.Column="0" Style="{StaticResource _defaultLabel}" Text="{Binding Velocity, Mode=OneWay}"/>
+        <Label Grid.Row="12" Grid.Column="0" Style="{StaticResource _defaultLabel}" Text="{Binding Rot, Mode=OneWay}"/>
+        <Button Grid.Row="11" Grid.Column="1" Grid.RowSpan="2" Text="обнуление" Command="{Binding ZeroingGyroCommand, Mode=OneWay}"/>
     </Grid>
 </ContentPage>
