--- a/Ship_Debbuger/Ship_Debbuger/MainPage.xaml
+++ b/Ship_Debbuger/Ship_Debbuger/MainPage.xaml
@@ -17,6 +17,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
@@ -51,5 +52,6 @@
         <Label Grid.Row="11" Grid.Column="0" Style="{StaticResource _defaultLabel}" Text="{Binding Velocity, Mode=OneWay}"/>
         <Label Grid.Row="12" Grid.Column="0" Style="{StaticResource _defaultLabel}" Text="{Binding Rot, Mode=OneWay}"/>
         <Button Grid.Row="11" Grid.Column="1" Grid.RowSpan="2" Text="обнуление" Command="{Binding ZeroingGyroCommand, Mode=OneWay}"/>
+        <Button Grid.Row="13" Grid.Column="0"  Text="Ручной режим" Command="{Binding ManualControlCommand, Mode=OneWay}"/>
     </Grid>
 </ContentPage>
